# poly-hammer-docs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  README.md  cspell.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  theme.config.tsx  vercel.json
.github/workflows/: docs.yml
.linux-venv/: pyvenv.cfg
docs/: .gitignore  index.md
docs/build-tool/: run-workflows.md  setup.md
docs/examples/: example.md  installation.md  quick-start.md
docs/hammer-build-tool/: create-releases.md  fine-grain-access-tokens.md  setup.md
docs/js/: glowing-cursor.js  particles-init.js  theme-icon.js
docs/poly-hammer-portal/: blender-extension-repo.md
docs/stylesheets/: extra.css
overrides/: main.html
overrides/templates/: extra_head.html  footer.html  sidebar.html
overrides/templates/components/: sidebar_item.html
scripts/: hooks.py  sync_docs.py
site/: 404.html  index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/search/: search_index.json
site/stylesheets/: extra.css
